# aws-resource-inventory

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  env.example  manage.py  nginx.conf  pyproject.toml  requirements.txt  test_credentials.py
.github/workflows/: django.yml
aws_inventory/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
docs/: AUTHENTICATION.md  DEPLOYMENT.md  ROLE_ASSUMPTION_SETUP.md  ROLE_ASSUMPTION_SUMMARY.md  SCHEDULED_POLLING.md
resources/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  urls_frontend.py  views.py  views_edl.py  views_frontend.py
resources/migrations/: 0001_initial.py  0002_remove_enisecondaryip_unique_eni_secondary_ip_and_more.py  0003_add_last_polled_to_account.py  0004_populate_last_polled.py  0005_add_security_group_rules.py  0006_eni_owner_account.py  0007_ec2instance_eni_ec2_instance.py  0008_ec2instance_tags_eni_tags_securitygroup_tags_and_more.py  0009_add_role_assumption_fields.py  0010_add_user_profile.py  0011_discoverytask.py  0012_awsaccount_auth_method_awsaccount_default_regions_and_more.py
resources/templatetags/: json_filters.py
resources/tests/: __init__.py  test_api_authentication.py  test_authentication.py  test_authorization.py  test_commands.py  test_edl_authentication.py  test_management_commands.py  test_models.py  test_services.py  test_tasks.py  test_views_api.py  test_views_edl.py  (+1 more)
scripts/: docker-entrypoint-dev.sh
templates/: base.html
(+18 files in other folders)
