[tool.poetry]
name = "aws-resource-inventory"
version = "0.1.0"
description = "Django application for discovering and managing AWS networking resources across multiple accounts and regions"
authors = ["Your Name <jermaine@jermaine.co>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.2.8"
djangorestframework = "^3.14.0"
boto3 = "^1.34.0"
python-decouple = "^3.8"
django-cors-headers = "^4.3.1"
django-filter = "^23.3"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
# Add development dependencies here as needed
# pytest = "^7.0"
# pytest-django = "^4.5"
# black = "^23.0"
# ruff = "^0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
